; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_279.c_rev.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_279.c_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rev(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 1, i32* %4, align 4
  %5 = bitcast i32* %4 to i8*
  %6 = load i8, i8* %5, align 4
  %7 = icmp ne i8 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  store i32 %9, i32* %2, align 4
  br label %28

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = ashr i32 %11, 24
  %13 = and i32 %12, 255
  %14 = load i32, i32* %3, align 4
  %15 = ashr i32 %14, 16
  %16 = and i32 %15, 255
  %17 = shl i32 %16, 8
  %18 = or i32 %13, %17
  %19 = load i32, i32* %3, align 4
  %20 = ashr i32 %19, 8
  %21 = and i32 %20, 255
  %22 = shl i32 %21, 16
  %23 = or i32 %18, %22
  %24 = load i32, i32* %3, align 4
  %25 = and i32 %24, 255
  %26 = shl i32 %25, 24
  %27 = or i32 %23, %26
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %10, %8
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
